<resources>
    <string name="app_name">BaseApplication</string>
    <string name="hello_base">Hello Base!</string>
    <string name="hello_primary_fragment">Hello primary fragment</string>
    <string name="hello_secondary_fragment">Hello secondary fragment</string>
    <string name="hello_toolbar_fragment">Hello toolbar fragment</string>
    <string name="a_simple_dialog">A simple dialog</string>
    <string name="menu_item_1">Rx Fragment</string>
    <string name="menu_item_2">Flow Fragment</string>
    <string name="menu_item_3">WorkManager Fragment</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_1">All</string>
    <string name="item_2">Favorite</string>
    <string name="write_something">Write Something</string>
    <string name="submit">Submit</string>
    <string name="from_menu_item_1">From Menu Item 1</string>
    <string name="from_menu_item_2">From Menu Item 2</string>
    <string name="from_menu_item_3">From Menu Item 3</string>
    <string name="no_games_found">No Games Found</string>
    <string name="stack_overflow_api_key">ZiXCZbWaOwnDgpVT9Hx8IA((</string>
    <string name="game_api_key">4490a60286684172b7bdb47257b388db</string>
    <string name="api_key">key</string>
    <string name="image_download">Download image</string>
    <string name="text_start_download">Start Download</string>
    <string name="text_query_work_info">Query Work Info</string>
    <string name="text_upload_desc">Downloading Using WorkManager</string>
    <string name="text_download_desc">Your Download with WorkManager is complete</string>
    <string name="text_retry">Retry</string>
    <plurals name="text_work_desc">
        <item quantity="one">WorkManager completed %d task</item>
        <item quantity="other">WorkManager completed %d tasks</item>
    </plurals>
</resources>