<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="40dp"
        android:src="@drawable/ic_profile"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:id="@+id/menu_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/menu_item_1"
        android:layout_marginHorizontal="24dp"
        android:padding="8dp"
        style="@style/LargeText"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginHorizontal="40dp"
        android:background="@color/black"/>

    <TextView
        android:id="@+id/menu_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/menu_item_2"
        android:layout_marginHorizontal="24dp"
        android:padding="8dp"
        style="@style/LargeText"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginHorizontal="40dp"
        android:background="@color/black"/>

    <TextView
        android:id="@+id/menu_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/menu_item_3"
        android:layout_marginHorizontal="24dp"
        android:padding="8dp"
        style="@style/LargeText"/>

</LinearLayout>